SQLite schema read in to Schema object.

--- a/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
+++ b/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
@@ -129,7 +129,9 @@
     <Compile Include="InformationSchema\Column.cs" />
     <Compile Include="Utility\Utilities.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DataAccess\SQLite\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
