Added Massive for SQL Server conversion Added licensing headers.

--- a/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
+++ b/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
@@ -129,8 +129,11 @@
     <Compile Include="InformationSchema\Column.cs" />
     <Compile Include="Utility\Utilities.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="DataAccess\SQLite\" />
+    <None Include="..\..\..\SelfInstallingWindowsServiceNET4.0\Service.Core\Service.Core.licenseheader">
+      <Link>Service.Core.licenseheader</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
