Using new and improved method for loading SQLite schema information.

--- a/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
+++ b/SQLiteConversionEngine2/SQLiteConversionEngine/SQLiteConversionEngine.csproj
@@ -112,21 +112,36 @@
   <ItemGroup>
     <Compile Include="Conversion\Connections.cs" />
     <Compile Include="Conversion\ConversionBase.cs" />
-    <Compile Include="Conversion\ToSQLiteConversionBase.cs" />
     <Compile Include="Conversion\ConverterBase.cs" />
     <Compile Include="Conversion\FromSQLiteConversionBase.cs" />
     <Compile Include="DataAccess\Massive.Sqlite.cs" />
-    <Compile Include="InformationSchema\Database.cs" />
-    <Compile Include="InformationSchema\ForeignKey.cs" />
-    <Compile Include="InformationSchema\Index.cs" />
     <Compile Include="InformationSchema\InformationSchemaBase.cs" />
-    <Compile Include="InformationSchema\Pragma.cs" />
-    <Compile Include="InformationSchema\Schema.cs" />
-    <Compile Include="InformationSchema\Table.cs" />
-    <Compile Include="InformationSchema\Trigger.cs" />
-    <Compile Include="InformationSchema\View.cs" />
+    <Compile Include="InformationSchema\InformationSchemaCollectionBase.cs" />
+    <Compile Include="InformationSchema\InformationSchemaItemBase.cs" />
+    <Compile Include="InformationSchema\SQLite\Database.cs" />
+    <Compile Include="InformationSchema\SQLite\Pragma.cs" />
+    <Compile Include="InformationSchema\SQLite\Catalog.cs" />
+    <Compile Include="InformationSchema\SQLite\CatalogCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\Column.cs" />
+    <Compile Include="InformationSchema\SQLite\ColumnCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\DataTypes.cs" />
+    <Compile Include="InformationSchema\SQLite\DataTypesCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\ForeignKey.cs" />
+    <Compile Include="InformationSchema\SQLite\ForeignKeyCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\Index.cs" />
+    <Compile Include="InformationSchema\SQLite\IndexCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\IndexColumn.cs" />
+    <Compile Include="InformationSchema\SQLite\IndexColumnCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\PragmaCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\Table.cs" />
+    <Compile Include="InformationSchema\SQLite\TableCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\Trigger.cs" />
+    <Compile Include="InformationSchema\SQLite\TriggerCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\View.cs" />
+    <Compile Include="InformationSchema\SQLite\ViewCollection.cs" />
+    <Compile Include="InformationSchema\SQLite\ViewColumn.cs" />
+    <Compile Include="InformationSchema\SQLite\ViewColumnCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InformationSchema\Column.cs" />
     <Compile Include="Utility\Utilities.cs" />
   </ItemGroup>
   <ItemGroup />
