--- a/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
+++ b/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
@@ -129,8 +129,9 @@
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumn.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumnCollection.cs" />
     <Compile Include="ToSQLiteConversion.cs" />
-    <Compile Include="ToSQLiteTranslator.cs" />
-    <Compile Include="FromSQLiteTranslator.cs" />
+    <Compile Include="Translate\ToSQLiteTableTranslator.cs" />
+    <Compile Include="Translate\ToSQLiteDatabaseTranslator.cs" />
+    <Compile Include="Translate\FromSQLiteTranslator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLiteConversionEngine\SQLiteConversionEngine.csproj">
