--- a/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
+++ b/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
@@ -107,7 +107,7 @@
   <ItemGroup>
     <Compile Include="Converter.cs" />
     <Compile Include="DataAccess\Massive.cs" />
-    <Compile Include="FromSQLiteConversion.cs" />
+    <Compile Include="Conversion\FromSQLiteConversion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\Column.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ColumnCollection.cs" />
@@ -128,7 +128,7 @@
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewCollection.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumn.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumnCollection.cs" />
-    <Compile Include="ToSQLiteConversion.cs" />
+    <Compile Include="Conversion\ToSQLiteConversion.cs" />
     <Compile Include="Translate\ToSQLiteTableTranslator.cs" />
     <Compile Include="Translate\ToSQLiteDatabaseTranslator.cs" />
     <Compile Include="Translate\FromSQLiteTranslator.cs" />
