--- a/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
+++ b/SQLiteConversionEngine2/SqlServerConverter/SqlServerConverter.csproj
@@ -109,6 +109,7 @@
     <Compile Include="DataAccess\Massive.cs" />
     <Compile Include="Conversion\FromSQLiteConversion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Conversion\ToSQLiteConversion.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\Column.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ColumnCollection.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\Database.cs" />
@@ -122,16 +123,12 @@
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\SchemataCollection.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\Table.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\TableCollection.cs" />
-    <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\Trigger.cs" />
-    <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\TriggerCollection.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\View.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewCollection.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumn.cs" />
     <Compile Include="SQLiteConversionEngine\InformationSchema\SqlServer\ViewColumnCollection.cs" />
-    <Compile Include="Conversion\ToSQLiteConversion.cs" />
-    <Compile Include="Translate\ToSQLiteTableTranslator.cs" />
-    <Compile Include="Translate\ToSQLiteDatabaseTranslator.cs" />
-    <Compile Include="Translate\FromSQLiteTranslator.cs" />
+    <Compile Include="SQLiteConversionEngine\Transform\ToSQLiteDatabaseTransform.cs" />
+    <Compile Include="SQLiteConversionEngine\Transform\FromSQLiteTransform.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLiteConversionEngine\SQLiteConversionEngine.csproj">
@@ -144,6 +141,7 @@
       <Link>Service.Core.licenseheader</Link>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
