Line endings... bah.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,39 @@
-# git ignore file
-*.bak
-*.suo
-bin/
-obj/
-*.dat
-*.licenseheader
-.DS_Store
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+
+#Visual Studio files
+[Oo]bj/*
+*.[Oo]bj
 *.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+
+#Project files
+[Bb]uild/
+
+#Subversion files
+.svn
+
+# Office Temp Files
+~$*
